Added title for Img

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
             <img id="playerOneAvatar" src="img/largeNoAvatar.png" alt="Avatar du joueur 1" />
             <div id="playerOneAttributes">
                 <div class="attribute cara"> 
-                    <img id="playerOneDamageImg" src="img/smallPower.png" alt="Image d'un gant de boxe" />
+                    <img id="playerOneDamageImg" src="img/smallPower.png" alt="Image d'un gant de boxe" title="Point de dégats" />
                     <p id="playerOneDamage" class="redPlayer">10</p>
                 </div>
                 <div class="attribute cara"> 
-                    <img id="playerOneLifeImg" src="img/smallLife.png" alt="Image d'un coeur" />
+                    <img id="playerOneLifeImg" src="img/smallLife.png" alt="Image d'un coeur" title="Points de vie restant" />
                     <p id="playerOneLife" class="redPlayer">100</p>
                 </div>
                 <div class="attribute cara"> 
-                    <img id="playerOneStepImg" src="img/smallStep.png" alt="Image de pas" />
+                    <img id="playerOneStepImg" src="img/smallStep.png" alt="Image de pas" title="Nombre de déplacement restant" />
                     <p id="playerOneStep" class="redPlayer">3</p>
                 </div>
             </div>
@@ -103,15 +103,15 @@
             <img id="playerTwoAvatar" src="img/largeNoAvatar.png" alt="Avatar du joueur 2" />
             <div id="playerTwoAttributes">
                 <div class="attribute cara"> 
-                    <img id="playerTwoDamageImg" src="img/smallPower.png" alt="Image d'un gant de boxe" />
+                    <img id="playerTwoDamageImg" src="img/smallPower.png" alt="Image d'un gant de boxe" title="Point de dégats" />
                     <p id="playerTwoDamage" class="bluePlayer">10</p>
                 </div>
                 <div class="attribute cara"> 
-                    <img id="playerTwoLifeImg" src="img/smallLife.png" alt="Image d'un coeur" />
+                    <img id="playerTwoLifeImg" src="img/smallLife.png" alt="Image d'un coeur" title="Points de vie restant" />
                     <p id="playerTwoLife" class="bluePlayer">100</p>
                 </div>
                 <div class="attribute cara"> 
-                    <img id="playerTwoStepImg" src="img/smallStep.png" alt="Image de pas" />
+                    <img id="playerTwoStepImg" src="img/smallStep.png" alt="Image de pas" title="Nombre de déplacement restant" />
                     <p id="playerTwoStep" class="bluePlayer">3</p>
                 </div>              
             </div>
