Added Weapon and Player class & optimization of createMap function

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <option value=1>Mode difficile : 12 x 12</option>
                 <option value=2>Mode expert : 14 x 14</option>
             </select>
-            <button class="btn btn-primary" onclick="Map()">Générer la carte</button>
+            <button class="btn btn-primary" onclick="createMap()">Générer la carte</button>
             </div>
         </div>
         
@@ -138,8 +138,8 @@ title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
               crossorigin="anonymous"></script>
     	<!-- Javascript perso -->
     <script src="js/Function.js"></script>
-    <script src="js/Map.js"></script>
     <script src="js/Display.js"></script>
+    <script src="js/Map.js"></script>   
   </body>
 
 </html>
