Optimization of Js files

--- a/index.html
+++ b/index.html
@@ -137,9 +137,14 @@ title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
               integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
               crossorigin="anonymous"></script>
     	<!-- Javascript perso -->
-    <script src="js/Function.js"></script>
+    <script src="js/Utilities.js"></script>
+    <script src="js/Player.js"></script>
+    <script src="js/Weapon.js"></script>
+    <script src="js/Initialization.js"></script>
+    <script src="js/Map.js"></script>
     <script src="js/Display.js"></script>
-    <script src="js/Map.js"></script>   
+    <script src="js/Fight.js"></script>
+    <script src="js/Movement.js"></script>  
   </body>
 
 </html>
