Player turns while fighting ok

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
           <div class="col-md-6 col-lg-8 hidden" id="fightMenu">
             <div class="fightMessage">
-              <h3>Messages de combat</h3>
+              <h3>Messages de combat :</h3>
               <div id="message">
               </div>
             </div>
