Disable keyboard when fight start

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
               </div>
             </div>
             <div class="col-md-12 col-lg-12" id="gameMenu">
-              <div class="col-md-6 col-lg-6" id="playerOneMenu">
-                <h3>Commandes joueur 1</h3>
+              <div class="col-md-12 col-lg-12" id="playerOneMenu">
+                <h3>Tour joueur 1</h3>
                 <button class="btn btn-danger" onclick="playerOne.attack(playerOne, playerTwo)">Attaquer</button>
                 <button class="btn btn-primary" onclick="playerOne.defend(playerOne, playerTwo)">Défendre</button>
               </div>
-              <div class="col-md-6 col-lg-6" id="playerTwoMenu">
-                <h3>Commandes joueur 2</h3>
+              <div class="col-md-12 col-lg-12" id="playerTwoMenu">
+                <h3>Tour joueur 2</h3>
                 <button class="btn btn-danger" onclick="playerTwo.attack(playerTwo, playerOne)">Attaquer</button>
                 <button class="btn btn-primary" onclick="playerTwo.defend(playerTwo, playerOne)">Défendre</button>
               </div>
